fix(savannah): add shadow to animal names for easier visibility

--- a/styles.css
+++ b/styles.css
@@ -149,6 +149,7 @@ header h3 {
     text-align: center;
     font-family: "SpecialElite";
     color:azure;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);
 }
 
 .savannah-animals ul li:hover h3 {
